--- a/sobre.html
+++ b/sobre.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página blog</h1>
-    <h2>Post número 1</h2>
-    <a href="index.html">Página home</a>
+    <h1>Sobre nós</h1>
 </body>
 </html>
